--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div id="app">
         <div id="player-1" class="player">
             <div class="wrapper">
-                <img src="https://images.unsplash.com/photo-1542491873-564432bfb050?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=487&q=80" alt="">
+                <img src="https://images.unsplash.com/photo-1542491873-564432bfb050?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=487&q=80" alt="Imagem de Capa de CD">
 
                 <div class="info">
                     <h1>Acorda devinho.</h1>
@@ -59,7 +59,7 @@
         <div id="player-2" class="player horizontal">
             <div class="wrapper">
                 <div class="info-wrapper">
-                    <img src="https://images.unsplash.com/photo-1542491873-564432bfb050?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=487&q=80" alt="">
+                    <img src="https://images.unsplash.com/photo-1542491873-564432bfb050?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=487&q=80" alt="Imagem de Capa de CD">
 
                     <div class="info">
                         <h1>Acorda devinho.</h1>
@@ -108,7 +108,7 @@
         <div id="player-3" class="player horizontal">
             <div class="wrapper">
                 <div class="info-wrapper">
-                    <img src="https://images.unsplash.com/photo-1542491873-564432bfb050?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=487&q=80" alt="">
+                    <img src="https://images.unsplash.com/photo-1542491873-564432bfb050?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=487&q=80" alt="Imagem de Capa de CD">
 
                     <div class="info">
                         <h1>Acorda devinho.</h1>
