--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <img src="https://images.unsplash.com/photo-1542491873-564432bfb050?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=487&q=80" alt="Imagem de Capa de CD">
 
                 <div class="info">
-                    <h1>Acorda devinho.</h1>
+                    <h1>Another L0v3</h1>
                     <p>Banda Rocketseat</p>
                 </div>
                 <div class="controls">
