--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
                 <div class="info">
                     <h1>Another L0v3</h1>
-                    <p>Banda Rocketseat</p>
+                    <p>Spring-day</p>
                 </div>
                 <div class="controls">
                     <div class="prev">
